[package]
name = "is_executable"
version = "1.0.4"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
description = "Is there an executable file at the given path?"
documentation = "https://docs.rs/is_executable"
readme = "./README.md"
repository = "https://github.com/fitzgen/is_executable"
license = "MIT OR Apache-2.0"
keywords = ["executable", "file", "path", "permissions"]
categories = ["filesystem"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

[dev-dependencies]
diff = "0.1.10"
